@@ -14,8 +14,9 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 
-/*
- * https://github.com/springfox/springfox/issues/1959
+/**
+ * This generates a swagger json file to the api folder.
+ * See https://github.com/springfox/springfox/issues/1959 for details.
  */
 @SpringBootTest
 public class GenerateSwagger {
@@ -30,7 +31,7 @@ public class GenerateSwagger {
                 .andDo((result) -> {
                     var swaggerPath = Paths.get("./../api/issue.json");
                     Files.createDirectories(swaggerPath.getParent());
-                    Files.write(swaggerPath, result.getResponse().getContentAsString().getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE);
+                    Files.writeString(swaggerPath, result.getResponse().getContentAsString(), StandardOpenOption.CREATE);
                 });
     }
 }
